<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dk.sdu.mmmi.sempro7E21.grpG.outinthegreen.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_stats"
        android:name="dk.sdu.mmmi.sempro7E21.grpG.outinthegreen.ui.stats.StatsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/nav_map"
        android:name="dk.sdu.mmmi.sempro7E21.grpG.outinthegreen.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />
</navigation>